--- a/src/components/FocusedPanel.scss
+++ b/src/components/FocusedPanel.scss
@@ -2,7 +2,7 @@
     &-screen {
         width: 200px;
         height: 200px;
-        background-color: red;
+        background-color: transparent;
         border: 1px solid #ccc;
     }
 }
