some ui styles experimentation

--- a/src/components/FocusedPanel.scss
+++ b/src/components/FocusedPanel.scss
@@ -1,8 +1,8 @@
-.focused-panel {
-    &-screen {
-        width: 200px;
-        height: 200px;
-        background-color: transparent;
-        border: 1px solid #ccc;
-    }
-}
+// .focused-panel {
+//     &-screen {
+//         width: 200px;
+//         height: 200px;
+//         background-color: transparent;
+//         border: 1px solid #ccc;
+//     }
+// }
